--- a/styles.css
+++ b/styles.css
@@ -15,19 +15,25 @@ body{
 form{
 	display:flex;
 	width:300px;
-	background-color:white;
+	background-color:rgb(255, 255, 255);
 	padding:20px;
 	border-radius:5px;
-	box-shadow:0 0 10px #ccc;
+	box-shadow:rgb(204, 204, 204) 0px 0px 10px 0px;
 	flex-direction:column;
 	gap:10px;
 }
 
+input{
+	border:1px solid rgb(204, 204, 204);
+	padding:10px;
+}
+
 button{
-	background-color:#1877f2;
+	background-color:rgb(24, 119, 242);
 	border-radius:5px;
 	padding:10px 20px;
 	border:none;
+	text-decoration:none;
 }
 
 a{
@@ -36,7 +42,7 @@ a{
 }
 
 .signup{
-	background-color:#42b72a;
+	background-color:rgb(66, 183, 42);
 }
 
 section{
