--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
 form{
 	display:flex;
 	width:300px;
-	background-color:rgb(255, 255, 255);
+	background-color:white;
 	padding:20px;
 	border-radius:5px;
 	box-shadow:rgb(204, 204, 204) 0px 0px 10px 0px;
