--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,19 @@ body{
 }
 
 form{
+	background-color:rgb(255, 255, 255);
 	display:flex;
 	width:300px;
-	background-color:rgb(255, 255, 255);
 	padding:20px;
 	border-radius:5px;
 	box-shadow:rgb(204, 204, 204) 0px 0px 10px 0px;
 	flex-direction:column;
 	gap:10px;
+}
+
+input{
+	border:1px solid rgb(204, 204, 204);
+	padding:10px;
 }
 
 button{
