--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 }
 
 form{
-	background-color:rgb(255, 255, 255);
+/* 	background-color:rgb(255, 255, 255); */
 	display:flex;
 	width:300px;
 	padding:20px;
