--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ form{
 }
 
 input , #email , #password{
-	border:1px solid rgb(204, 204, 204);
+/* 	border:1px solid rgb(204, 204, 204); */
 	padding:10px;
 }
 
