--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ input , #email , #password{
 }
 
 button{
-	background-color:rgb(24, 119, 242);
+/* 	background-color:rgb(24, 119, 242); */
 	border-radius:5px;
 	padding:10px 20px;
 	border:none;
