--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,8 @@ button{
 }
 
 a{
-	text-decoration:none;
-	color:#1877f2;
+/* 	text-decoration:none; */
+/* 	color:rgb(24, 119, 242); */
 }
 
 .signup{
